# find_dups

./: .gitignore  Cargo.toml  README.md
src/: about_the_same.rs  args.rs  lib.rs  main.rs
