[package]
name = "find_dups"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.1", features = ["derive"] }
kurbo = "0.10.4"
skrifa = "0.15.5"
thiserror = "1.0.57"
write-fonts = "0.22.1"  # pens
